<?xml version="1.0"?>
<package format="2">
  <name>morai_standard</name>
  <version>0.0.1</version>
  <description>morai_standard package</description>

  <maintainer email="morai@morai.ai">morai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
